bindings/idris2/src/Proven/FFI.idr

-- SPDX-License-Identifier: PMPL-1.0-or-later
-- Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

||| Raw %foreign "C" declarations for libproven.
|||
||| This module declares every C function exported by the precompiled
||| libproven shared library. Each declaration uses the
||| `%foreign "C:symbol_name,libproven"` syntax so the Idris 2 RefC
||| codegen links against the shared object at compile time.
|||
||| These are low-level, effectful primitives. For safe, total wrappers
||| that return `Maybe` types, use the individual `Proven.Safe*` modules.
|||
||| String-accepting C functions (which take `const uint8_t* ptr, size_t len`)
||| are declared here with `(String, Int)` parameters. The RefC backend
||| marshals `String` as `const char*` and `Int` as a machine word, which
||| is ABI-compatible with the C signatures.
|||
||| Memory management rules:
|||   - String results from C must be freed with `prim__proven_free_string`
|||   - Integer, boolean, and float results need no freeing
|||   - Opaque pointers (URL components, etc.) have matching free functions
module Proven.FFI

import System.FFI

%default total

-- ============================================================================
-- Status code constants
-- ============================================================================

||| Success status code (PROVEN_OK = 0).
public export
statusOK : Int
statusOK = 0

||| Null pointer error (PROVEN_ERR_NULL_POINTER = -1).
public export
statusErrNullPointer : Int
statusErrNullPointer = -1

||| Invalid argument error (PROVEN_ERR_INVALID_ARGUMENT = -2).
public export
statusErrInvalidArgument : Int
statusErrInvalidArgument = -2

||| Integer overflow error (PROVEN_ERR_OVERFLOW = -3).
public export
statusErrOverflow : Int
statusErrOverflow = -3

||| Integer underflow error (PROVEN_ERR_UNDERFLOW = -4).
public export
statusErrUnderflow : Int
statusErrUnderflow = -4

||| Division by zero error (PROVEN_ERR_DIVISION_BY_ZERO = -5).
public export
statusErrDivisionByZero : Int
statusErrDivisionByZero = -5

||| Parse failure error (PROVEN_ERR_PARSE_FAILURE = -6).
public export
statusErrParseFailure : Int
statusErrParseFailure = -6

||| Validation failed error (PROVEN_ERR_VALIDATION_FAILED = -7).
public export
statusErrValidationFailed : Int
statusErrValidationFailed = -7

||| Index out of bounds error (PROVEN_ERR_OUT_OF_BOUNDS = -8).
public export
statusErrOutOfBounds : Int
statusErrOutOfBounds = -8

||| Encoding error (PROVEN_ERR_ENCODING_ERROR = -9).
public export
statusErrEncodingError : Int
statusErrEncodingError = -9

||| Allocation failure error (PROVEN_ERR_ALLOCATION_FAILED = -10).
public export
statusErrAllocationFailed : Int
statusErrAllocationFailed = -10

||| Not implemented error (PROVEN_ERR_NOT_IMPLEMENTED = -99).
public export
statusErrNotImplemented : Int
statusErrNotImplemented = -99

-- ============================================================================
-- ProvenError: A typed representation of libproven error codes
-- ============================================================================

||| Error codes returned by libproven functions, represented as an
||| algebraic data type for pattern matching.
public export
data ProvenError
  = NullPointer
  | InvalidArgument
  | Overflow
  | Underflow
  | DivisionByZero
  | ParseFailure
  | ValidationFailed
  | OutOfBounds
  | EncodingError
  | AllocationFailed
  | NotImplemented
  | UnknownError Int

||| Display a human-readable description of a ProvenError.
public export
Show ProvenError where
  show NullPointer      = "ProvenError: null pointer"
  show InvalidArgument  = "ProvenError: invalid argument"
  show Overflow         = "ProvenError: integer overflow"
  show Underflow        = "ProvenError: integer underflow"
  show DivisionByZero   = "ProvenError: division by zero"
  show ParseFailure     = "ProvenError: parse failure"
  show ValidationFailed = "ProvenError: validation failed"
  show OutOfBounds      = "ProvenError: index out of bounds"
  show EncodingError    = "ProvenError: encoding error"
  show AllocationFailed = "ProvenError: allocation failed"
  show NotImplemented   = "ProvenError: not implemented"
  show (UnknownError n) = "ProvenError: unknown error code " ++ show n

||| Convert an integer status code to a ProvenError.
||| Returns `Nothing` for statusOK (0), `Just err` for non-zero codes.
public export
statusToError : Int -> Maybe ProvenError
statusToError 0    = Nothing
statusToError (-1) = Just NullPointer
statusToError (-2) = Just InvalidArgument
statusToError (-3) = Just Overflow
statusToError (-4) = Just Underflow
statusToError (-5) = Just DivisionByZero
statusToError (-6) = Just ParseFailure
statusToError (-7) = Just ValidationFailed
statusToError (-8) = Just OutOfBounds
statusToError (-9) = Just EncodingError
statusToError (-10) = Just AllocationFailed
statusToError (-99) = Just NotImplemented
statusToError n    = Just (UnknownError n)

||| Convert a status code to `Either ProvenError ()`.
||| Useful for operations that return only a status with no payload.
public export
statusToEither : Int -> Either ProvenError ()
statusToEither s = case statusToError s of
  Nothing  => Right ()
  Just err => Left err

||| Check whether a status code indicates success.
public export
isOK : Int -> Bool
isOK 0 = True
isOK _ = False

-- ============================================================================
-- JSON value types (for SafeJson)
-- ============================================================================

||| JSON value types as returned by `proven_json_get_type`.
public export
data JsonType
  = JsonNull
  | JsonBool
  | JsonNumber
  | JsonString
  | JsonArray
  | JsonObject
  | JsonInvalid

||| Display a JSON type.
public export
Show JsonType where
  show JsonNull    = "null"
  show JsonBool    = "boolean"
  show JsonNumber  = "number"
  show JsonString  = "string"
  show JsonArray   = "array"
  show JsonObject  = "object"
  show JsonInvalid = "invalid"

||| Convert the integer type code from C to a JsonType.
public export
intToJsonType : Int -> JsonType
intToJsonType 0    = JsonNull
intToJsonType 1    = JsonBool
intToJsonType 2    = JsonNumber
intToJsonType 3    = JsonString
intToJsonType 4    = JsonArray
intToJsonType 5    = JsonObject
intToJsonType _    = JsonInvalid

-- ============================================================================
-- Lifecycle
-- ============================================================================

||| Initialise the proven runtime (includes Idris 2 runtime).
||| Must be called before any other proven function. Safe to call multiple times.
||| Returns the status code: 0 on success, negative on error.
%foreign "C:proven_init,libproven"
export
prim__proven_init : PrimIO Int

||| Shut down the proven runtime.
||| Call when done using proven functions. All allocated resources should
||| be freed before calling this.
%foreign "C:proven_deinit,libproven"
export
prim__proven_deinit : PrimIO ()

||| Check whether the runtime is initialised.
||| Returns non-zero (true) if initialised, zero (false) otherwise.
%foreign "C:proven_is_initialized,libproven"
export
prim__proven_is_initialized : PrimIO Int

-- ============================================================================
-- Version
-- ============================================================================

||| Get the FFI ABI version for compatibility checking.
%foreign "C:proven_ffi_abi_version,libproven"
export
prim__proven_ffi_abi_version : PrimIO Int

||| Get the major version number.
%foreign "C:proven_version_major,libproven"
export
prim__proven_version_major : PrimIO Int

||| Get the minor version number.
%foreign "C:proven_version_minor,libproven"
export
prim__proven_version_minor : PrimIO Int

||| Get the patch version number.
%foreign "C:proven_version_patch,libproven"
export
prim__proven_version_patch : PrimIO Int

||| Get the total module count in libproven.
%foreign "C:proven_module_count,libproven"
export
prim__proven_module_count : PrimIO Int

-- ============================================================================
-- Memory management
-- ============================================================================

||| Free a string allocated by a proven function.
||| Must be called for every successful string result from the C layer.
||| Passing a null/invalid pointer is safe (no-op).
%foreign "C:proven_free_string,libproven"
export
prim__proven_free_string : AnyPtr -> PrimIO ()

-- ============================================================================
-- SafeMath (8 functions)
-- ============================================================================

||| Safe integer division. Returns status and quotient.
||| Status is PROVEN_ERR_DIVISION_BY_ZERO if denominator is 0,
||| PROVEN_ERR_OVERFLOW for INT64_MIN / -1.
%foreign "C:proven_math_div,libproven"
export
prim__proven_math_div : Int64 -> Int64 -> PrimIO (Int, Int64)

||| Safe modulo. Returns status and remainder.
%foreign "C:proven_math_mod,libproven"
export
prim__proven_math_mod : Int64 -> Int64 -> PrimIO (Int, Int64)

||| Checked addition with overflow detection.
%foreign "C:proven_math_add_checked,libproven"
export
prim__proven_math_add_checked : Int64 -> Int64 -> PrimIO (Int, Int64)

||| Checked subtraction with underflow detection.
%foreign "C:proven_math_sub_checked,libproven"
export
prim__proven_math_sub_checked : Int64 -> Int64 -> PrimIO (Int, Int64)

||| Checked multiplication with overflow detection.
%foreign "C:proven_math_mul_checked,libproven"
export
prim__proven_math_mul_checked : Int64 -> Int64 -> PrimIO (Int, Int64)

||| Safe absolute value. PROVEN_ERR_OVERFLOW for INT64_MIN.
%foreign "C:proven_math_abs_safe,libproven"
export
prim__proven_math_abs_safe : Int64 -> PrimIO (Int, Int64)

||| Clamp value to [lo, hi] range. Pure function, cannot fail.
%foreign "C:proven_math_clamp,libproven"
export
prim__proven_math_clamp : Int64 -> Int64 -> Int64 -> Int64

||| Integer exponentiation with overflow checking.
||| Exponent is passed as a 32-bit unsigned integer.
%foreign "C:proven_math_pow_checked,libproven"
export
prim__proven_math_pow_checked : Int64 -> Int -> PrimIO (Int, Int64)

-- ============================================================================
-- SafeString (4 functions)
-- ============================================================================

||| Check if bytes are valid UTF-8.
||| Takes the string data as a String (char*) and its length.
%foreign "C:proven_string_is_valid_utf8,libproven"
export
prim__proven_string_is_valid_utf8 : String -> Int -> PrimIO (Int, Int)

||| Escape string for SQL. Returns (status, result_ptr, result_len).
||| Caller must free result_ptr via prim__proven_free_string.
%foreign "C:proven_string_escape_sql,libproven"
export
prim__proven_string_escape_sql : String -> Int -> PrimIO (Int, AnyPtr, Int)

||| Escape string for HTML. Returns (status, result_ptr, result_len).
||| Caller must free result_ptr via prim__proven_free_string.
%foreign "C:proven_string_escape_html,libproven"
export
prim__proven_string_escape_html : String -> Int -> PrimIO (Int, AnyPtr, Int)

||| Escape string for JavaScript. Returns (status, result_ptr, result_len).
||| Caller must free result_ptr via prim__proven_free_string.
%foreign "C:proven_string_escape_js,libproven"
export
prim__proven_string_escape_js : String -> Int -> PrimIO (Int, AnyPtr, Int)

-- ============================================================================
-- SafePath (2 functions)
-- ============================================================================

||| Check if path contains directory traversal sequences ("..").
||| Returns (status, bool_value) where bool_value is non-zero if traversal found.
%foreign "C:proven_path_has_traversal,libproven"
export
prim__proven_path_has_traversal : String -> Int -> PrimIO (Int, Int)
